# coin_research

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
log/: README.md
research/: leaderboard.json  strategy_backlog.md
scripts/: seed_demo_market_data.py  start_local_postgres.sh  stop_local_postgres.sh
src/coin_research/: __init__.py  backtest_absolute_momentum_volatility_composite.py  backtest_absolute_momentum_volatility_composite_short.py  backtest_breadth_ema_scaled_absolute_momentum_composite.py  backtest_breadth_regime_gated_composite.py  backtest_breadth_scaled_absolute_momentum_composite.py  backtest_cross_sectional_relative_strength.py  backtest_donchian_breakout.py  backtest_ema_trend_following.py  cli.py  (+15 more)
tests/: test_absolute_momentum_volatility_composite.py  test_account_backtest.py  test_backtest_runs.py  test_breadth_ema_scaled_absolute_momentum_composite.py  test_breadth_regime_gated_composite.py  test_breadth_scaled_absolute_momentum_composite.py  test_cli.py  test_config.py  test_connectivity.py  test_cross_sectional_relative_strength.py  test_data.py  test_db.py  test_donchian_breakout.py  test_ema_trend_following.py  test_inverse_short_signals.py  test_liquidity_screened_absolute_momentum_composite.py  test_market_views.py  test_momentum_volatility_composite.py  test_pages.py  test_paired_inverse_ranking.py  test_paper_live.py  test_paper_runner.py  test_paper_service.py  test_short_term_reversal_basket.py  test_sync.py  test_time_utils.py  test_volatility_compression_breakout.py  test_web_app.py  test_zscore_mean_reversion.py
(+42 files in other folders)
